<resources>

    <!-- Strings -->
    <string name="app_name">What Is The Weather</string>
    <string name="request_execution_has_failed">Request execution has failed</string>
    <string name="celsius">°C</string>
    <string name="mp_h">mp/h</string>
    <string name="percent">%</string>
    <string name="comma_divider">,</string>
    <string name="current_city">Current city:</string>
    <string name="weather_in_my_city">Weather in my city</string>
    <string name="find_city">Find city</string>
    <string name="weather">Weather</string>
    <string name="feedback">Feedback</string>
    <string name="rate_application">Rate application</string>
    <string name="weather_in">Weather in</string>
    <string name="what_is_the_weather">What Is The Weather</string>
    <string name="unknown_city">Unknown City</string>
    <string name="your_city">your city</string>
    <string name="internet_is_needed">Internet connection needed. Enable it!</string>
    <string name="gps_is_needed">GPS needed for city auto loading. Enable it!</string>
    <string name="loading">Loading</string>
    <string name="internet_and_gps_are_needed">Internet and GPS needed</string>
    <string name="enable_gps_question">Do you want to enable GPS?</string>

    <!-- Fonts -->
    <string name="font_montserrat_regular">Montserrat-Regular.ttf</string>

</resources>
