<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/main_background" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_above="@+id/weather_overviews_container"
        android:src="@drawable/black_gradient" />

    <LinearLayout
        android:id="@+id/weather_in_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/background"
        android:layout_marginTop="-45dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/weather_in"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/current_city_name_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:text="@string/your_city"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/weather_overviews_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/background"
        android:dividerHeight="5.0sp">

    </ListView>

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/background"
        android:layout_marginTop="-45dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/loading"
            android:textColor="@color/colorWhite"
            android:textSize="25sp" />

        <ProgressBar
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="7dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/internet_and_gps_is_needed_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/background"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="-45dp"
        android:text="@string/internet_and_gps_are_needed"
        android:textColor="@color/colorWhite"
        android:textSize="25sp" />

</RelativeLayout>
