<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_weather_overview_background"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <tsekhmeistruk.whatistheweather.widgets.views.FontTextView
            android:id="@+id/date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mon, 17.07"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/description_text_size" />

        <tsekhmeistruk.whatistheweather.widgets.views.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=","
            android:textColor="@color/colorGray"
            android:textSize="@dimen/description_text_size" />

        <tsekhmeistruk.whatistheweather.widgets.views.FontTextView
            android:id="@+id/short_weather_description_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Mostly sunny"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/description_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1">

            <tsekhmeistruk.whatistheweather.widgets.views.FontTextView
                android:id="@+id/main_temperature_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="23"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/main_temperature_text_size" />

            <tsekhmeistruk.whatistheweather.widgets.views.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-25dp"
                android:text="@string/celsius"
                android:textColor="@color/colorGray"
                android:textSize="40dp" />

        </LinearLayout>

        <ImageView
            android:layout_marginRight="10dp"
            android:id="@+id/weather_icon_image_view"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end|center_vertical"
            android:adjustViewBounds="true"
            android:src="@drawable/weather_icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:adjustViewBounds="true"
            android:src="@drawable/wind" />

        <tsekhmeistruk.whatistheweather.widgets.views.FontTextView
            android:id="@+id/wind_speed_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="5.61"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/description_text_size" />

        <tsekhmeistruk.whatistheweather.widgets.views.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/mp_h"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/description_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:adjustViewBounds="true"
                android:src="@drawable/humidity" />

            <tsekhmeistruk.whatistheweather.widgets.views.FontTextView
                android:id="@+id/humidity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="48"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/description_text_size" />

            <tsekhmeistruk.whatistheweather.widgets.views.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/percent"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/description_text_size" />

        </LinearLayout>

        <ImageView
            android:src="@drawable/arrow"
            android:layout_width="30dp"
            android:layout_height="30dp" />

    </LinearLayout>

</LinearLayout>